add virtual thread PerformanceTest